<resources>
    <!--Metodos de la API-->
    <string name="api_login">login</string>
    <string name="api_register">register</string>
    <string name="api_user">user</string>
    <string name="api_books">books</string>
    <string name="api_categories">categories</string>
    <string name="api_authors">authors</string>

    <!--Share preference-->
    <string name="name_file_preference">mx.kodemia.bookodemia.sharedpreferences</string>
    <string name="preference_token">token</string>

    <!--Key de acceso de la API-->
    <string name="api_key_token">plain-text-token</string>

    <!--string app resources-->
    <string name="app_name">Bookodemia</string>
    <string name="link_registro">¿Todavía no tienes cuenta? Registrate</string>
    <string name="desc_registro">Estas a unos cuantos pasos de vivir la mejor experiencia</string>
    <string name="populares">Más populares</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="back">Regresar</string>
    <string name="title_registro">Registra tu información</string>
    <string name="username">Usuario</string>
    <string name="confirm_password">Confirmar Constraseña</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="hello">Hola</string>
    <string name="books">Libros</string>
    <string name="categories">Categorías</string>
    <string name="author">Autores</string>
    <string name="recently_added">Recién agregados</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="details">Detalles</string>
    <string name="description">Descripción</string>
    <string name="about_author_title">Sobre el Autor</string>
    <string name="author_name">Nombre del autor</string>
    <string name="more_titles_autor">Más títulos del autor</string>
    <string name="title_book">Título</string>
    <string name="by_author">by %s</string>
    <string name="category">Categoría</string>
    <string name="error_empty">Este campo es requerido</string>
    <string name="placeholder_user">Alan-TM</string>
    <string name="placeholder_user2">FerLima</string>
    <string name="error_matching_passwords">La contraseña no coincide</string>
    <string name="error_login_button">Llena los campos requeridos</string>
    <string name="img_descripcion">Banner</string>
    <string name="img_logo">Logo</string>
    <string name="img_favoritos">Favoritos</string>
    <string name="img_compartir">Compartir</string>
    <string name="img_details_libro">Libro</string>
    <string name="img_details_autor">Autor</string>
    <string name="img_populares">Libros más populares</string>
    <string name="agregados_titulo">Titulo</string>
    <string name="agregados_autor">by Autor</string>
    <string name="agregados_categoria">Categoría</string>
    <string name="agregados_libro_portada">Portada</string>

    <string name="error_dialog_body">No existe el usuario\nPor favor, verifica tus datos</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_invalid_email">Correo Inválido</string>
    <string name="success_register">El usuario a sido creado</string>
    <string name="error_connection">No hay conexión a internet</string>
    <string name="device_name">User\'s phone</string>
    <string name="error_email_taken">El correo ya a sido utilizado</string>
    <string name="snack_welcome">Bienvenido %s !</string>
    <string name="error_verify_fields">Error, por favor verifica los datos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_logout">Cerrar Sesión</string>
    <string name="recycler_details_autor">by %s</string>
    <string name="favorites">Favoritos</string>
    <string name="user">Perfil</string>
    <string name="details_detalles">Creado: %s \n\n Actualizado: %s</string>
    <string name="error_dialog_out">Salir</string>
    <string name="categoria_categoria">Categoría</string>
    <string name="user_created_at">Usuario creado\n%s</string>
    <string name="error_something_happened">Error, algo sucedio</string>
    <string name="error_many_request">Error, demasiadas peticiones al servidor</string>


</resources>