<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.book.DetallesLibro">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerConstraint_detalles_libro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_banner_details"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_details_banner"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:contentDescription="@string/img_descripcion"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/banner" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_details_back"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/back"
                android:textSize="20sp"
                android:textStyle="bold"
                app:icon="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/image_details_heart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/img_favoritos"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_heart"
                app:layout_constraintBottom_toTopOf="@id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/img_compartir"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_share_alt"
                app:layout_constraintBottom_toTopOf="@id/divider"
                app:layout_constraintEnd_toStartOf="@id/image_details_heart"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:dividerColor="@color/blue_dark"
                app:dividerInsetStart="70dp"
                app:dividerThickness="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_details_back" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linear_detalles_libro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout_banner_details">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_details_portada"
                    android:layout_width="100dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="40dp"
                    android:contentDescription="@string/img_details_libro"
                    android:elevation="12dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/libro_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_details_libro"
                    style="?attr/materialCardViewElevatedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="70dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="14dp"
                    app:cardElevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/image_details_portada"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <View
                            android:id="@+id/bottom_placeholder"
                            android:layout_width="100dp"
                            android:layout_height="0dp"
                            app:layout_constraintBottom_toBottomOf="@id/text_details_categoria"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/text_details_titulo"/>


                        <TextView
                            android:id="@+id/text_details_titulo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/title_book"
                            android:textColor="@color/blue_dark"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.43"
                            app:layout_constraintStart_toEndOf="@id/bottom_placeholder"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/text_details_autor"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/by_author"
                            android:textColor="@color/gray_dark"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/text_details_titulo"
                            app:layout_constraintTop_toBottomOf="@+id/text_details_titulo"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/text_details_categoria"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/category"
                            android:textColor="@color/gray_dark"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/text_details_autor"
                            app:layout_constraintTop_toBottomOf="@id/text_details_autor"
                            tools:ignore="TextContrastCheck" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_details_descricion"
                    style="?attr/materialCardViewElevatedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="14dp"
                    app:cardElevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_details_libro">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_details_detalles"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/details"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/button_details_descripcion"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="0dp"
                            android:layout_marginVertical="12dp"
                            android:background="@color/blue_dark"
                            android:elevation="2dp"
                            app:layout_constraintBottom_toBottomOf="@id/button_details_descripcion"
                            app:layout_constraintEnd_toStartOf="@id/button_details_detalles"
                            app:layout_constraintStart_toEndOf="@id/button_details_descripcion"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_details_descripcion"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toStartOf="@id/button_details_detalles"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/text_details_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/lorem"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/button_details_descripcion" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_details_about_autor"
                    style="?attr/materialCardViewElevatedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="14dp"
                    app:cardElevation="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_details_descricion">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/cv_details_about_autor_image"
                            style="?attr/materialCardViewOutlinedStyle"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="16dp"
                            android:backgroundTint="@color/white"
                            app:cardCornerRadius="40dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:strokeColor="@color/blue_dark"
                            app:strokeWidth="2dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/image_details_about_autor"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:contentDescription="@string/img_details_autor"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/ic_user_alt"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:tint="@color/blue_light" />

                            </androidx.constraintlayout.widget.ConstraintLayout>


                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:id="@+id/text_details_about_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/about_author_title"
                            android:textColor="@color/blue_dark"
                            android:textSize="18sp"
                            app:layout_constraintStart_toEndOf="@id/cv_details_about_autor_image"
                            app:layout_constraintTop_toTopOf="@id/cv_details_about_autor_image" />

                        <TextView
                            android:id="@+id/text_details_nombre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/author_name"
                            android:textColor="@color/blue_dark"
                            android:textSize="24sp"
                            app:layout_constraintStart_toEndOf="@id/cv_details_about_autor_image"
                            app:layout_constraintTop_toBottomOf="@id/text_details_about_title" />

                        <TextView
                            android:id="@+id/text_details_about_autor"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/lorem"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@id/text_details_more_titles_autor"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/text_details_nombre" />

                        <TextView
                            android:id="@+id/text_details_more_titles_autor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/more_titles_autor"
                            android:textColor="@color/blue_light"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/text_details_about_autor"
                            tools:ignore="TextContrastCheck" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


