<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".DetallesUsuario">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_banner_user"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_favorites_banner"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:contentDescription="@string/img_descripcion"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/banner" />

            <TextView
                android:id="@+id/text_user_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="-4dp"
                android:textColor="@color/blue_dark"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/image_favorites_banner"
                app:layout_constraintStart_toStartOf="@id/image_favorites_banner"
                android:text="@string/user" />

            <ImageButton
                android:id="@+id/image_user_logout"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/transparent"
                android:foregroundTint="@color/error"
                android:contentDescription="@string/img_logout"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_logout"
                app:layout_constraintBottom_toTopOf="@id/favorites_divider"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/favorites_divider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:dividerColor="@color/blue_dark"
                app:dividerInsetStart="70dp"
                app:dividerThickness="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_user_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/placeholder_user2"
            android:textColor="@color/blue_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_banner_user" />

        <TextView
            android:id="@+id/text_user_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            tools:text="TextView"
            android:text="@string/placeholder_user2"
            android:textColor="@color/error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_user_name" />

        <TextView
            android:id="@+id/text_user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            tools:text="TextView"
            android:text="@string/placeholder_user2"
            app:layout_constraintEnd_toEndOf="@+id/text_user_id"
            app:layout_constraintStart_toStartOf="@+id/text_user_id"
            app:layout_constraintTop_toBottomOf="@+id/text_user_id" />

        <TextView
            android:id="@+id/text_user_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/placeholder_user2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_user_email"
            tools:text="TextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>